2014-08-25  Andreas Schwab <schwab@suse.de>

	[BZ #16657]
	* nptl/pthread_mutex_destroy.c (__pthread_mutex_destroy): Skip
	checks when doing elision.
	* nptl/sysdeps/unix/sysv/linux/x86/pthread_mutex_destroy.c: New
	file.

2014-08-25  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/Makefile [nptl]
	(sysdep_routines): Add lock elision objects.
	* sysdeps/unix/sysv/linux/powerpc/bits/pthreadtypes.h
	[pthread_mutex_t] (__spins): Rework to add lock elision field.
	[pthread_mutex_t] (__elision): Add field.
	[__PTHREAD_SPINS]: Adjust to init lock elision field.
	* sysdeps/unix/sysv/linux/powerpc/elision-conf.c: New file: lock
	elision definitions for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/elision-lock.c: New file:
	implementation of lock elision for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/elision-timed.c: New file:
	implementation of timed lock elision for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/elision-trylock.c: New file:
	implementation of trylock with lock elision for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/elision-unlock.c: New file:
	implementaion of unlock for lock elision for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/force-elision.h: New file:
	automatic enable lock elision for mutexes.
	* sysdeps/unix/sysv/linux/powerpc/htm.h: New file: hardware
	transaction execution definitions for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/lowlevellock.h
	(__lll_timedlock_elision): New prototype.
	(__lll_lock_elision): Likewise.
	(__lll_unlock_elision): Likewise.
	(__lll_trylock_elision): Likewise.
	(lll_timedlock_elision): New define.
	(lll_lock_elision): Likewise.
	(lll_unlock_elision): Likewise.
	(lll_trylock_elision): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/pthread_mutex_cond_lock.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/pthread_mutex_lock.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/pthread_mutex_timedlock.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/pthread_mutex_trylock.c: Likewise.
