@@ -1,3 +1,7 @@
+2014-08-25  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
+	* sysdeps/unix/sysv/linux/powerpc/pthread_mutex_destroy.c: New file.
+
 2014-08-25  Andreas Schwab <schwab@suse.de>
 
 	[BZ #16657]
